--- a/fly.toml
+++ b/fly.toml
@@ -2,14 +2,8 @@
 
 app = "drs2342"
 
+# Use Dockerfile for build (avoids mise Python extraction issues)
 [build]
-  builder = "paketobuildpacks/builder:base"
-  buildpacks = ["gcr.io/paketo-buildpacks/python"]
-  
-  [build.args]
-    # Force mise to compile Python instead of using broken precompiled binaries
-    MISE_PYTHON_COMPILE = "1"
-    MISE_SETTINGS__PYTHON_COMPILE = "1"
 
 [env]
   # Force mise to compile Python from source
